# xournalr

./: .gitignore  Cargo.toml  README.md
src/: float.rs  logic.rs  main.rs  quadtree.rs
src/custom_paintable/: imp.rs  mod.rs
src/custom_widget/: imp.rs  mod.rs
ui/: main.glade  main.glade~  popover.glade  popover.glade~
