# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "xournalr"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"

[dependencies]
aatree = "0.1"
euclid = "0.22"
geo = { git = "https://github.com/lehmanju/geo", branch = "custom" }
glib = { version = "0.14", features = ["log"] }
gtk = { version = "0.2", package = "gtk4" }
log = "0.4"
ring-channel = "0.8"
rstar = { git = "https://github.com/georust/rstar", features = ["serde"] }
